<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_shuffle" android:checkable="true" android:title="@string/option_shuffle" android:checked="false" android:icon="@+drawable/icon48_shuffle_off"></item>
    <item android:id="@+id/item_repeat" android:checkable="true" android:checked="false" android:icon="@+drawable/icon48_repeat_off" android:title="@string/option_repeat"></item>
    <item android:id="@+id/item_clear_filters" android:icon="@+drawable/icon48_clear" android:title="@string/option_clear_filters"></item>
    <item android:id="@+id/item_refresh" android:icon="@+drawable/icon48_refresh" android:title="@string/option_update_catalog"></item>
    <item android:id="@+id/item_info" android:title="@string/option_info" android:icon="@+drawable/icon48_info"></item>    
</menu>
