<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/Dialog">

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/check_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_enable_feedback" />

    <CheckBox
        android:id="@+id/check_proxy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_enable_proxy" />

    <TextView
        android:id="@+id/text_proxy_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="48dp"
        android:text="@string/label_proxy_details"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button android:id="@+id/button_ok"
    		android:text="@string/button_ok" 
    		android:layout_gravity="center" 
    		android:minWidth="100dp" 
    		style="@style/Button.large"/>
</LinearLayout>
